# zhuotuan

./: .env.example  .gitignore  .skill  README.md  pyproject.toml
artifacts/cases/: quickstart_clocktower.json  quickstart_escort_betrayal.json  quickstart_loop_school.json  quickstart_metro_whisper.json  quickstart_mountain_village.json  quickstart_rainy_town.json  quickstart_river_port.json  quickstart_secret_realm.json  quickstart_snow_inn.json  quickstart_temple_fire.json
artifacts/characters/: min_character.json  min_character_review.json  quickstart_rainy_town_draft.json  quickstart_rainy_town_draft.raw.txt  quickstart_rainy_town_manual_card.json  quickstart_rainy_town_questionnaire.json  quickstart_rainy_town_review.json  quickstart_rainy_town_roster_review.json
artifacts/modules/: min_module.json  quickstart_rainy_town.json  quickstart_rainy_town_generation_report.json
artifacts/rulesets/: min_ruleset.json
artifacts/sessions/: min_session_snapshot.json
artifacts/worlds/: min_world.json  quickstart_rainy_town.json  quickstart_rainy_town_character_profile.json  quickstart_rainy_town_with_profile.json
backend/: __init__.py  cli.py
backend/app/: config.py  main.py
docs/: zhuotuan_backend_technical_design.md  zhuotuan_product_design.md
docs/backend_plan/: README.md  development_conventions.md
scripts/eval/: eval_character_review.py  eval_world_module_batch.py  schema_regression.py
scripts/perf/: perf_character_pipeline.py  perf_world_module_generation.py
scripts/phase1/: build_minimum_schemas.py  generate_character_creation_profile.py  (+9 more)
(+74 files in other folders)
